Fix text that had contrast too low

--- a/disasterinfosite/static/style/_map.scss
+++ b/disasterinfosite/static/style/_map.scss
@@ -125,7 +125,7 @@
 
 .hazard-link, .prepare-link {
   border-bottom: 2px solid $soft-white;
-  color: $bright-accent;
+  color: $light-accent;
   margin: 5px 10px;
   text-decoration: none;
   white-space: nowrap;
